new db details